apps/waifubot/api.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api
spec:
  serviceName: "api"
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/go-waifubot/api:postgres
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
