apps/waifubot/bot.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bot
spec:
  serviceName: "bot"
  replicas: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      labels:
        app: bot
    spec:
      containers:
        - name: bot
          image: ghcr.io/karitham/waifubot:corde
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bot
spec:
  selector:
    app: bot
  ports:
    - port: 8080
      targetPort: 8080
