apps/waifubot/waifubot.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bot
spec:
  serviceName: bot
  replicas: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
      labels:
        app: bot
    spec:
      containers:
        - name: bot
          image: ghcr.io/karitham/waifubot:v1.4.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bot
spec:
  selector:
    app: bot
  ports:
    - port: 8080
      targetPort: 8080
