apps/waifubot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - waifuapi.karitham.dev
      secretName: waifuapi-tls-secret
  rules:
    - host: waifuapi.karitham.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bot
                port:
                  number: 8080
